# general-intellect

./: .gitignore  Dockerfile  OUTREACH.md  README.md  docker-compose.yml  mkdocs.yml  requirements.txt
docs/: api-reference.md  index.md  quickstart.md  vapi-integration.md
examples/codex-agent/: README.md  agent.py  requirements.txt
examples/retell-voice-agent/: README.md  package.json
examples/retell-voice-agent/src/: webhook.ts
examples/vapi-customer-support/: README.md  main.py  requirements.txt
scripts/: benchmark.py
sdk/node/: README.md  package-lock.json  package.json
sdk/node/src/: index.ts  vapi.ts
sdk/python/: README.md  pyproject.toml
sdk/python/generalintelect/: __init__.py  client.py  vapi.py
server/: config.py  main.py
server/api/: routes.py
server/memory/: acl.py  encoder.py  models.py  store.py
