[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "general-intellect"
version = "0.1.0"
description = "Persistent, semantic memory for AI agents. No vector DB required."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["ai", "agents", "memory", "vapi", "retell", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/General-Intellect/general-intellect"
Documentation = "https://github.com/General-Intellect/general-intellect/blob/main/docs/quickstart.md"
Repository = "https://github.com/General-Intellect/general-intellect"

[tool.hatch.build.targets.wheel]
packages = ["generalintelect"]
